tests/ui/lifetimes/issue-107988.stderr
error[E0261]: use of undeclared lifetime name `'tcx`
  --> $DIR/issue-107988.rs:7:52
   |
LL | impl<T: ?Sized + TraitEngine<'tcx>> TraitEngineExt<'tcx> for T {
   |                                                    ^^^^ undeclared lifetime
   |
help: consider introducing lifetime `'tcx` here
   |
LL | impl<'tcx, T: ?Sized + TraitEngine<'tcx>> TraitEngineExt<'tcx> for T {
   |      +++++

error[E0261]: use of undeclared lifetime name `'tcx`
  --> $DIR/issue-107988.rs:7:30
   |
LL | impl<T: ?Sized + TraitEngine<'tcx>> TraitEngineExt<'tcx> for T {
   |                              ^^^^ undeclared lifetime
   |
   = note: for more information on higher-ranked polymorphism, visit https://doc.rust-lang.org/nomicon/hrtb.html
help: consider making the bound lifetime-generic with a new `'tcx` lifetime
   |
LL | impl<T: ?Sized + for<'tcx> TraitEngine<'tcx>> TraitEngineExt<'tcx> for T {
   |                  +++++++++
help: consider introducing lifetime `'tcx` here
   |
LL | impl<'tcx, T: ?Sized + TraitEngine<'tcx>> TraitEngineExt<'tcx> for T {
   |      +++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0261`.
